Fixed platform border radius on iphone browser

--- a/src/css/imports/_form.scss
+++ b/src/css/imports/_form.scss
@@ -33,6 +33,8 @@ input[type='password'] {
   @if($useRoundedCorner==true) {
     border-top-right-radius: .25rem;
     border-top-left-radius: .25rem;
+  } @else {
+    border-radius: 0rem;
   }
 
   background-color: var(--color-primary-lighter);
